Remove local disk and token API reference

--- a/LibRESTApiTodoistTest/App.config
+++ b/LibRESTApiTodoistTest/App.config
@@ -3,7 +3,7 @@
 
   <appSettings>
     <add key="BaseURLRESTApi" value="https://beta.todoist.com/API/v8" />
-    <add key="AuthenticationToken" value="18629477668f41d31ebbfe553d231e8257ac8f39" />
+    <add key="AuthenticationToken" value="" />
     <add key="RetryCount" value="5" />
     <add key="DelayInSecondsForRetry" value="30" />
   </appSettings>
@@ -11,7 +11,7 @@
   <system.diagnostics>
     <trace autoflush="true">
       <listeners>
-        <add name="xml" type="Essential.Diagnostics.RollingFileTraceListener, Essential.Diagnostics.RollingFileTraceListener" initializeData="C:\Cosmos\Cosmos_Log\LibRESTApiTodoistTest\LibRESTApiTodoistTest_{DateTime:yyyyMMdd}.log" />
+        <add name="xml" type="Essential.Diagnostics.RollingFileTraceListener, Essential.Diagnostics.RollingFileTraceListener" initializeData="C:\temp\LibRESTApiTodoistTest_{DateTime:yyyyMMdd}.log" />
       </listeners>
     </trace>
   </system.diagnostics>
