Save log application in execution path, with ApplicationName_Datetime format

--- a/LibRESTApiTodoistTest/App.config
+++ b/LibRESTApiTodoistTest/App.config
@@ -11,7 +11,7 @@
   <system.diagnostics>
     <trace autoflush="true">
       <listeners>
-        <add name="xml" type="Essential.Diagnostics.RollingFileTraceListener, Essential.Diagnostics.RollingFileTraceListener" initializeData="C:\temp\LibRESTApiTodoistTest_{DateTime:yyyyMMdd}.log" />
+        <add name="xml" type="Essential.Diagnostics.RollingFileTraceListener, Essential.Diagnostics.RollingFileTraceListener" initializeData="{ApplicationName}_{LocalDateTime:yyyyMMdd}.log" />
       </listeners>
     </trace>
   </system.diagnostics>
